# lang2pick

./: .gitignore  .pre-commit-config.yaml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: build_container.yml
docker/: Dockerfile  setup.sh
ros2_ws/so101_bringup/: CMakeLists.txt
ros2_ws/so101_control/: CMakeLists.txt  package.xml  so101_hardware_interface.xml
ros2_ws/so101_control/config/: so101.ros2_control.xacro  so101.urdf.xacro  so101.yaml
ros2_ws/so101_control/driver/: CMakeLists.txt  INST.h  SCS.cpp  SCS.h  SCSCL.cpp  SCSCL.h  SCSerial.cpp  SCSerial.h  SCServo.h  SMSBL.h  SMSCL.cpp  SMSCL.h  SMS_STS.cpp  SMS_STS.h  sync_read.cpp
ros2_ws/so101_control/include/so101_control/: so101_hardware_interface.hpp
ros2_ws/so101_control/launch/: interface.launch.py
ros2_ws/so101_control/src/: so101_hardware_interface.cpp
ros2_ws/so101_description/urdf/: so101.urdf.xacro  so101_description.urdf.xacro
ros2_ws/so101_motion/: CMakeLists.txt  package.xml
vla/src/web-app/front-end/: package.json
vla/src/web-app/front-end/.next/dev/: prerender-manifest.json
vla/src/web-app/front-end/.next/dev/cache/: config.json
vla/src/web-app/front-end/.next/dev/server/: server-reference-manifest.js  server-reference-manifest.json
